--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+::-webkit-scrollbar {
+    height: 6px;              /* height of horizontal scrollbar ← You're missing this */
+    width: 6px;               /* width of vertical scrollbar */
   }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  
+  ::-webkit-scrollbar-track {
+    background: #dddddd;
+    border-radius: 10px;
+  
   }
-}
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  ::-webkit-scrollbar-thumb {
+    background:  #27272a;
+    border-radius: 10px;
+  }
+  
+
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
